update category add put patch function